iaac/blueprint/infra/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    name: infra
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    name: logging
    istio-injection: disabled
